--- a/public/css/app.css
+++ b/public/css/app.css
@@ -222,7 +222,7 @@ div {
   color: #ffcc4a;
 }
 
-.headline {
+.headlines {
   width: 900px;
   height: 150px;
   margin: 0 auto;
@@ -231,21 +231,37 @@ div {
   border-radius: 300px;
 }
 
-.headline .display{
+.headlines .headline{
   width: 800px;
   padding-top: 20px;
   margin: 0 auto;
 }
 
-.headline .title {
+.headlines .title {
   padding-top: 15px;
   font-weight: bold;
     font-size: 50px;
 }
 
-.headline .artist {
+.headlines .artist {
   padding-bottom: 15px;
   font-size: 30px;
+}
+
+.display {
+  float: left;
+  width: 50%;
+  text-align: left;
+  font-size: 20PX;
+}
+
+.displays {
+  width: 1200px;
+  height: 5000px;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .lesson {
@@ -281,6 +297,56 @@ div {
 .lesson-icon:hover {
   transform: rotateZ( 30deg );
   transform: scale(1.1, 1.1);
+}
+
+.gaikokugogakushu {
+  font-weight: bold;
+  font-size: 22px;
+  padding: 10px;
+}
+
+.contact-form {
+  width: 70%;
+  margin: 60px auto;
+  padding: 50px;
+  background-color: #F5F5F5;
+  color: #333;
+}
+
+.form-title {
+  text-align: center;
+  margin-bottom: 30px;
+  font-size: 30px;
+}
+
+.form-item {
+  padding: 20px 0 10px 0;
+  font-weight: bold;
+}
+
+input[type="text"] {
+  width: 300px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 6px 12px;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  font-size: 14px;
+  line-height: 1.428571429;
+  color: #555;
+}
+
+textarea {
+  width: 90%;
+  height: 100px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 6px 12px;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  font-size: 14px;
+  line-height: 1.428571429;
+  color: #555;
 }
 
 abbr[title],
